# crawler00_indigo_ws

./: .gitignore
crawler_core/: Naming
crawler_core/crawler_msgs/: manifest.xml
crawler_core/crawler_msgs/msg/: VisualHeading.msg
crawler_core/crawler_teleop/: CMakeLists.txt  manifest.xml
crawler_core/crawler_teleop/launch/: start_crawler_teleop.launch
crawler_core/crawler_vision/: CMakeLists.txt  manifest.xml
crawler_core/mmc_communicator/: CMakeLists.txt  CMakeLists.txt.save  manifest.xml
crawler_core/mmc_communicator/include/: Connection.h  DelimitedMessageConnection.cpp  example  example_sync.cpp
crawler_core/mmc_communicator/include/GoogleProtocolBuffers_2_5_0/: Makefile  config.status  libtool
crawler_core/mmc_communicator/include/GoogleProtocolBuffers_2_5_0/gtest/: Makefile  config.status  libtool
crawler_core/mmc_communicator/include/GoogleProtocolBuffers_2_5_0/src/: Makefile
crawler_core/mmc_communicator/include/google/protobuf/.svn/: wc.db
crawler_core/mmc_communicator/include/protocol/: Bootloader.pb.cpp  Bootloader.pb.h  Control.pb.cpp  Control.pb.h  Core.pb.cpp  Core.pb.h  DataTypes.pb.cpp  DataTypes.pb.h  RemoteServices.pb.cpp  RemoteServices.pb.h  Settings.pb.cpp  Settings.pb.h
crawler_core/mmc_communicator/include/protocol_old/: Bootloader.pb.cpp  ModuleControl.pb.h  ModuleParameters.pb.cpp  ModuleParameters.pb.h
crawler_core/mmc_communicator/include/protocol_old/.svn/: wc.db
crawler_core/mmc_communicator/src/: mmc_comm_main.cpp
crawler_core/mmc_communicator/src/Backup/: mmc_comm_main (1029A_BeforeMMC Object).cpp  mmc_comm_main (1029B_BeforeConstructorInit).cpp  mmc_comm_main (1030BeforeCmd).cpp  mmc_comm_main (Working 1).cpp  mmc_comm_main (Working 2).cpp  ros_main_template.cpp
crawler_core/mmc_communicator/src/cppSeaSnakeCommExample/: README.txt
crawler_core/mmc_communicator/src/cppSeaSnakeCommExample/.svn/: wc.db
crawler_core/mmc_communicator/src/cppSeaSnakeCommExample/GoogleProtocolBuffers_2_5_0/: Makefile  config.status  libtool
crawler_core/mmc_communicator/src/cppSeaSnakeCommExample/GoogleProtocolBuffers_2_5_0/.svn/: wc.db
crawler_core/mmc_communicator/src/cppSeaSnakeCommExample/GoogleProtocolBuffers_2_5_0/gtest/: Makefile  config.status  libtool
crawler_core/mmc_communicator/src/cppSeaSnakeCommExample/GoogleProtocolBuffers_2_5_0/src/: Makefile
crawler_core/mmc_communicator/src/cppSeaSnakeCommExample/protocol/: MetaInfo.pb.h  RemoteService.pb.cpp  RemoteService.pb.h
crawler_core/mmc_communicator/src/old/: mmc_comm_main (another copy).cpp  mmc_comm_main (copy).cpp  mmc_comm_main_151024.cpp  mmc_comm_main_beta.cpp  mmc_comm_main_beta2.cpp
crawler_core/pmd_camboard_nano/: CMakeLists.txt  log.txt
sandbox/ll_vision/: CMakeLists.txt  manifest.xml
sandbox/opencv_sandbox/: CMakeLists.txt  manifest.xml
(+23 files in other folders)
